--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/JOSProjects/IMDb-Movie-Bot",
+    "website": "https://github.com/Agunivers7/IMDB-BOT",
     "repository": "https://github.com/Agunivers7/IMDB-BOT",
     "env": {
         "BOT_TOKEN": {
