--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "IMDb-Movie-Bot",
+    "name": "file-filter-bot",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
     "stack": "container",
     "keywords": [
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/Agunivers7/IMDB-BOT",
-    "repository": "https://github.com/Agunivers7/IMDB-BOT",
+    "website": "https://github.com/malik7983/file-filter-bot",
+    "repository": "https://github.com/Maliksahid786/file-filter-botv5",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -55,16 +55,31 @@
             "required": false
         },
         "DATABASE_URI": {
-            "description": "mongoDB URI. Get this value from https://www.mongodb.com. For more help watch this video - https://youtu.be/nj-lJfkgb6w",
+            "description": "mongoDB URI. Get this value from https://www.mongodb.com. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
             "required": true
         },
         "DATABASE_NAME": {
-            "description": "Name of the database in mongoDB. For more help watch this video - https://youtu.be/nj-lJfkgb6w",
+            "description": "Name of the database in mongoDB. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
             "required": false
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
             "value": "Telegram_files",
+            "required": false
+        },
+        "SINGLE_BUTTON": {
+            "description": "choose b/w single or double buttons",
+            "value": "True",
+            "required": false
+        },
+        "P_TTI_SHOW_OFF": {
+            "description": "Customize Result Buttons to Callback or Url by (True = url / False = callback)",
+            "value": "True",
+            "required": false
+        },
+        "SUPPORT_CHAT": {
+            "description": "Username of a Support Group / ADMIN. ( Should be username without @ and not ID)",
+            "value": "m_house786",
             "required": false
         }
     },
