--- a/app.json
+++ b/app.json
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/malik7983/file-filter-bot",
-    "repository": "https://github.com/Maliksahid786/file-filter-botv5",
+    "website": "https://github.com/Agunivers7/IMDB_BOT",
+    "repository": "https://github.com/Agunivers7/IMDB_BOT",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
